cover alignment fixed at p

--- a/style.css
+++ b/style.css
@@ -174,8 +174,6 @@ main .banner img {
 }
 
 main .banner .cover {
-
-    background-color: red;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -198,6 +196,7 @@ main .banner .cover {
     line-height: 3.2rem;
     letter-spacing: 3px;
     text-shadow: 1px 2px 2px var(--font-color-tertiary);
+    text-align: center;
 
     margin-bottom: .5rem;
 }
